--- a/2.html
+++ b/2.html
@@ -195,7 +195,7 @@
 <figure data-id="2-6" class="large">(A) Pictorial view of series-connected cells; (B) Schematic of series connection.</figure>
 <p>Figure 2-6 view B is a schematic representation of the circuit shown in figure 2-6 view A. The load is shown by the resistance symbol and the battery is indicated by one long and one short line per cell.</p>	
 <p>In a series hookup, the negative electrode (cathode) of the first cell is connected to the positive electrode (anode) of the second cell, the negative electrode of the second to the positive of the third, etc.</p>	 
-<p>The positive electrode of the first cell and negative electrode of the last cell then serve as the terminals of the battery. In this way, the voltage is 1.5 volts for each cell in the series line. There are four cells, so the output terminal voltage is 1.5 4, or 6 volts. When connected to the load, 1/8 ampere flows through the load and each cell of the battery. This is within the capacity of each cell. Therefore, only four series-connected cells are needed to supply this particular load.</p>	
+<p>The positive electrode of the first cell and negative electrode of the last cell then serve as the terminals of the battery. In this way, the voltage is 1.5 volts for each cell in the series line. There are four cells, so the output terminal voltage is 1.5 &times; 4, or 6 volts. When connected to the load, 1/8 ampere flows through the load and each cell of the battery. This is within the capacity of each cell. Therefore, only four series-connected cells are needed to supply this particular load.</p>	
 
 <div class="alert alert-caution">When connecting cells in series, connect alternate terminals together (&minus; to &#43;, &minus; to &#43;, et cetera). Always have two remaining terminals that are used for connection to the load only. Do not connect the two remaining terminals together as this is a short across the battery and would not only quickly discharge the cells but could cause some types of cells to explode.</div>
 
@@ -215,7 +215,7 @@
 	<p>Q26.  What are the three ways of combining cells, and what is each used for?</p>
 </i>
 
-<h5>BATTERY CONSTRUCTION</h5>
+<h4>BATTERY CONSTRUCTION</h4>
 <p>Secondary cell batteries are constructed using the various secondary cells already described. The lead-acid battery is one of the most common batteries in use today and will be used to explain battery construction. The nickel-cadmium battery is being used with increasing frequency and will also be discussed.</p>	
 <p>Figure 2-9 shows the makeup of a lead-acid battery. The container houses the separate cells. Most containers are hard rubber, plastic, or some other material that is resistant to the electrolyte and  mechanical shock and will withstand extreme temperatures. The container (battery case) is vented through vent plugs to allow the gases that form within the cells to escape. The plates in the battery are the cathodes and anodes that were discussed earlier. In figure 2-10 the negative plate group is the cathode of the individual cells and the positive plate group is the anode. As shown in the figure, the plates are interlaced with a terminal attached to each plate group. The terminals of the individual cells are connected together by link connectors as shown in figure 2-9. The cells are connected in series in the battery and the positive terminal of one end cell becomes the positive terminal of the battery. The negative terminal of the opposite end cell becomes the negative terminal of the battery.</p>	
 <figure data-id="2-9">Lead-acid battery construction.</figure>
@@ -238,5 +238,82 @@
 <p>For a battery to work properly, its electrolyte (water plus active ingredient) must contain a certain amount of active ingredient. Since the active ingredient is dissolved in the water, the amount of active ingredient cannot be measured directly. An indirect way to determine whether or not the electrolyte contains the proper amount of active ingredient is to measure the electrolyte's specific gravity. Specific gravity is the ratio of the weight of a certain amount of a given substance compared to the weight of the same amount of pure water. The specific gravity of pure water is 1.0. Any substance that floats has a specific gravity less than 1.0. Any substance that sinks has a specific gravity greater than 1.0.</p>	 
 <p>The active ingredient in electrolyte (sulfuric acid, potassium hydroxide, etc.) is heavier than water. Therefore, the electrolyte has a specific gravity greater than 1.0. The acceptable range of specific gravity for a given battery is provided by the battery's manufacturer. To measure a battery's specific gravity, use an instrument called a HYDROMETER.</p>	
 
-<h5>UNDER CONSTRUCTION</h5>
-<p>...</p>
+<h5>The Hydrometer</h5>
+<p>A hydrometer, shown in figure 2-12, is a glass syringe with a float inside it. The float is a hollow glass tube sealed at both ends and weighted at the bottom end, with a scale calibrated in specific gravity marked on its side. To test an electrolyte, draw it into the hydrometer using the suction bulb. Draw enough electrolyte into the hydrometer to make the float rise. Do not draw in so much electrolyte that the float rises into the suction bulb. The float will rise to a point determined by the specific gravity of the electrolyte. If the electrolyte contains a large amount of active ingredient, its specific gravity will be relatively high. The float will rise higher than it would if the electrolyte contained only a small amount of active ingredient.</p>	
+<figure data-id="2-12">Hydrometer.</figure>
+<p>To read the hydrometer, hold it in a vertical position and read the scale at the point that surface of the electrolyte touches the float. Refer to the manufacturer's technical manual to determine whether or not the battery's specific gravity is within specifications.</p>	
+<p>Note: Hydrometers should be flushed with fresh water after each use to prevent inaccurate readings. Storage battery hydrometers must not be used for any other purpose.</p>	
+
+<i>
+	<p>Q29.  What is the purpose of the hydrometer?</p>
+	<p>Q30.  Which electrolyte has more active ingredient? Electrolyte A, specific gravity 1.015? Electrolyte B, specific gravity 1.125?</p>
+</i>
+
+<h5>Other Maintenance</h5>
+<p>The routine maintenance of a battery is very simple. Terminals should be checked periodically for cleanliness and good electrical connection. The battery case should be inspected for cleanliness and evidence of damage. The level of electrolyte should be checked and if the electrolyte is low, distilled water should be added to bring the electrolyte to the proper level. Maintenance procedures for batteries are normally determined by higher authority and each command will have detailed procedures for battery care and maintenance.</p>	
+
+<h5>Safety Precautions With Batteries</h5>
+<p>All types of batteries should be handled with care:</p>
+<ol>
+	<li>NEVER SHORT THE TERMINALS OF A BATTERY.</li>
+	<li>CARRYING STRAPS SHOULD BE USED WHEN TRANSPORTING BATTERIES.</li>
+	<li>PROTECTIVE CLOTHING, SUCH AS RUBBER APRON, RUBBER GLOVES, AND A FACE SHIELD SHOULD BE WORN WHEN WORKING WITH BATTERIES.</li>
+	<li>NO SMOKING, ELECTRIC SPARKS, OR OPEN FLAMES SHOULD BE PERMITTED NEAR CHARGING BATTERIES.</li>
+	<li>CARE SHOULD BE TAKEN TO PREVENT SPILLING OF THE ELECTROLYTE.</li>
+</ol>
+<p>In the event electrolyte is splashed or spilled on a surface, such as the floor or table, it should be diluted with large quantities of water and cleaned up immediately.</p>	
+<p>If the electrolyte is spilled or splashed on the skin or eyes, IMMEDIATELY flush the skin or eyes with large quantities of fresh water for a minimum of 15 minutes. If the electrolyte is in the eyes, be sure the upper and lower eyelids are pulled out sufficiently to allow the fresh water to flush under the eyelids. The medical department should be notified as soon as possible and informed of the type of electrolyte and the location of the accident.</p>	
+
+<h4>CAPACITY AND RATING OF BATTERIES</h4>
+<p>The CAPACITY of a battery is measured in ampere-hours. The ampere-hour capacity is equal to the product of the current in amperes and the time in hours during which the battery will supply this current. The ampere-hour capacity varies inversely with the discharge current. For example, a 400 ampere-hour battery will deliver 400 amperes for 1 hour or 100 amperes for 4 hours.</p>	
+<p>Storage batteries are RATED according to their rate of discharge and ampere-hour capacity. Most batteries are rated according to a 20-hour rate of discharge. That is, if a fully charged battery is completely discharged during a 20-hour period, it is discharged at the 20-hour rate. Thus, if a battery can deliver 20 amperes continuously for 20 hours, the battery has a rating of 20 amperes &times; 20 hours, or 400 ampere-hours. Therefore, the 20-hour rating is equal to the average current that a battery is capable of supplying without interruption for an interval of 20 hours. (Note: Aircraft batteries are rated according to a 1-hour rate of discharge.)</p>	 
+<p>All standard batteries deliver 100 percent of their available capacity if discharged in 20 hours or more, but they will deliver less than their available capacity if discharged at a faster rate. The faster they discharge, the less ampere-hour capacity they have.</p>	
+<p>The low-voltage limit, as specified by the manufacturer, is the limit beyond which very little useful energy can be obtained from a battery. This low-voltage limit is normally a test used in battery shops to determine the condition of a battery.</p>	
+
+<i>
+	<p>Q31.  When should safety precautions pertaining to batteries be observed?</p>	
+	<p>Q32.  How long should a 200 ampere-hour battery be able to deliver 5 amperes?</p>	
+</i>
+
+<h4>BATTERY CHARGING</h4>
+<p>It should be remembered that adding the active ingredient to the electrolyte of a discharged battery does not recharge the battery. Adding the active ingredient only increases the specific gravity of the electrolyte and does not convert the plates back to active material, and so does not bring the battery back to a charged condition. A charging current must be passed through the battery to recharge it.</p>	
+<p>Batteries are usually charged in battery shops. Each shop will have specific charging procedures for the types of batteries to be charged. The following discussion will introduce you to the types of battery charges.</p>	
+<p>The following types of charges may be given to a storage battery, depending upon the condition of the battery:</p>	
+<ol>
+	<li>Initial charge</li>
+	<li>Normal charge</li>
+	<li>Equalizing charge</li>
+	<li>Floating charge</li>
+	<li>Fast charge</li>
+</ol>
+
+<h5>Initial Charge</h5>
+<p>When a new battery is shipped dry, the plates are in an uncharged condition. After the electrolyte has been added, it is necessary to charge the battery. This is accomplished by giving the battery a long low- rate initial charge. The charge is given in accordance with the manufacturer's instructions, which are shipped with each battery. If the manufacturer's instructions are not available, reference should be made to the detailed instructions for charging batteries found in current Navy directives.</p>	
+
+<h5>Normal Charge</h5>
+<p>A normal charge is a routine charge that is given in accordance with the nameplate data during the ordinary cycle of operation to restore the battery to its charged condition.</p>	
+
+<h5>Equalizing Charge</h5>
+<p>An equalizing charge is a special extended normal charge that is given periodically to batteries as part of a maintenance routine. It ensures that all the sulfate is driven from the plates and that all the cells are restored to a maximum specific gravity. The equalizing charge is continued until the specific gravity of all cells, corrected for temperature, shows no change for a 4-hour period.</p>	
+
+<h5>Floating Charge</h5>
+<p>In a floating charge, the charging rate is determined by the battery voltage rather than by a definite current value. The floating charge is used to keep a battery at full charge while the battery is idle or in light duty. It is sometimes referred to as a trickle charge and is accomplished with low current.</p>	
+
+<h5>Fast Charge</h5>
+<p>A fast charge is used when a battery must be recharged in the shortest possible time. The charge starts at a much higher rate than is normally used for charging. It should be used only in an emergency, as this type charge may be harmful to the battery.</p>	
+
+<h5>Charging Rate</h5>
+<p>Normally, the charging rate of Navy storage batteries is given on the battery nameplate. If the available charging equipment does not have the desired charging rates, the nearest available rates should be used. However, the rate should never be so high that violent gassing (explained later in this text) occurs.</p>	
+
+<h5>Charging Time</h5>
+<p>The charge must be continued until the battery is fully charged. Frequent readings of specific gravity should be taken during the charge and compared with the reading taken before the battery was placed on charge.</p>	
+
+<h5>Gassing</h5>
+<p>When a battery is being charged, a portion of the energy breaks down the water in the electrolyte. Hydrogen is released at the negative plates and oxygen at the positive plates. These gases bubble up through the electrolyte and collect in the air space at the top of the cell. If violent gassing occurs when the battery is first placed on charge, the charging rate is too high. If the rate is not too high, steady gassing develops as the charging proceeds, indicating that the battery is nearing a fully charged condition.</p>	
+
+<div class="alert alert-warning">A mixture of hydrogen and air can be dangerously explosive. No smoking, electric sparks, or open flames should be permitted near charging batteries.</div>
+
+<i>
+	<p>Q33.  Can a battery be recharged by adding more electrolyte?</p>
+	<p>Q34.  If violent gassing occurs during a battery charge, what action should be taken?</p>
+</i>
