minor fixes to chapter 3 part 2

--- a/4.html
+++ b/4.html
@@ -19,10 +19,10 @@
 <figure data-id="3-54a" class="equation"></figure>
 <p>To simplify the math operation, the values can be expressed in powers of ten as follows:</p>
 <figure data-id="3-55" class="equation"></figure>
-<p>If you are not familiar with the use of the powers of 10 or would like to brush up on it, Mathematics, Vol. 1, NAVEDTRA 10069-C, will be of great help to you.</p>
+<p>If you are not familiar with the use of the powers of 10 or would like to brush up on it, <i>Mathematics, Vol. 1</i>, NAVEDTRA 10069-C, will be of great help to you.</p>
 
 <i>
-    <p>Q33.  What would the source voltage (E<sub>s</sub>) in figure 3-39 be if the current through R2 were 2 milliamps?</p>
+    <p>Q33.  What would the source voltage (E<sub>s</sub>) in figure 3-39 be if the current through R<sub>2</sub> were 2 milliamps?</p>
 </i>
 
 <h5>Current in a Parallel Circuit</h5>
